Fix for maven warning "Integer(int) in java.lang.Integer has been deprecated".